# rust-examples

./: .gitignore  LICENSE  readme.md
aws_lambda/: .env-example  .gitignore  Cargo.toml  collections.http  docker-compose.yml  justfile  readme.md
aws_lambda/migration/: Cargo.toml
aws_lambda/migration/src/: lib.rs  m20250717_170555_create_customer_table.rs
aws_lambda/src/: err.rs  handlers.rs  lib.rs  main.rs  om.rs  responses.rs  state.rs
aws_lambda/src/commands/: create.rs  mod.rs
aws_lambda/src/http/: handlers.rs  mod.rs  om.rs
aws_lambda/src/queries/: mod.rs
aws_lambda/src/schemas/: customer.rs  mod.rs  prelude.rs
