[workspace]
members = ["migration"]

[package]
name = "aws_lambda"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "customer"
path = "src/main.rs"

[dependencies]
lambda_http = "0.15"
tokio = { version = "1.46", features = ["macros"] }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
axum = { version = "0.8" }
thiserror = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
